2006-03-16 Arwed v. Merkatz <v.merkatz@gmx.net>
	* CONFIGURE, DEPENDS: disable decnet support as it's broken,
	  fixes bug #8922

2006-03-12 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS: ...almost forgot PATCHLEVEL.

2006-03-12 Juuso Alasuutari <iuso@sourcemage.org>
	* ifdown: Fixed borkage resulting from new $MODE values in 
	  netconf's .dev files.

2006-03-06 Arjan Bouter <abouter@sourcemage.org>
	* ifup, ifdown: added custom MAC and dhcp hostname options
	* ifup.8.gz, ifdown.8.gz: manpages added

2006-02-12 David Brown <dmlb2000@gmail.com>
	* BUILD: added patch for double-free-nameif.patch
	* double-free-nameif.patch: added

2006-02-08 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depends on smgl-fhs (for directory structure)

2006-02-06 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depends on gnupg (for SOURCE verification)

2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-10-21 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depend on libdnet if building DECnet support
	  (thanks to Jiri Golembiovsky <golemj@gmail.com>)

2005-04-28 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated UPDATED
	* DEPENDS: Depends on coreutils  (Bug #7089)

2005-04-23 Sergey Lipnevich <sergey@sourcemage.org>
	* ifup: several improvements in the script:
	  1. The key number goes after the key;
	  2. Use "commit" for iwconfig;
	  3. Use "-n" instead of "! -z" everywhere;
	  4. Use conditionals that don't generate a call to "[" executable
	    (internal bash comparisons with double backets "[[...]]");
	  5. Declare variables as "local;"
	  6. Don't compare with empty string, use "-z" instead;
	  7. Consistently use "&& call" one-liner instead of "if ...; then call; fi"

2005-04-19 Arwed v. Merkatz <v.merkatz@gmx.net>
	* ifup: fix '||' missing in a line leading to an error message for every
	  ifup call

2005-04-08 Arjan Bouter <abouter@sourcemage.org>
	* ifup: added options to change the MAC and
	  support for custom options
