@@ -10,6 +10,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
       PATCHLEVEL=1
       LICENSE[0]=GPL
        BUILD_API=2
+        KEYWORDS="net"
            SHORT="Essential tools for networking."
 cat << EOF
 The Net-tools package contains the arp, hostname, ifconfig, netstat,
