@@ -1,0 +1,2 @@
+STATUS=n
+QUESTION="INET6 (IPv6) protocol family"
