@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="Novell IPX/SPX protocol family"
