@@ -1,0 +1,2 @@
+STATUS=n
+QUESTION="Ash hardware support"
