@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="AX25 (packet radio) support"
