@@ -1,0 +1,2 @@
+STATUS=n
+QUESTION="Econet hardware support"
