@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="Ethernet (generic) support"
