@@ -1,0 +1,2 @@
+STATUS=n
+QUESTION="FDDI (generic) support"
