@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="DLCI/FRAD (frame relay) support"
