@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="NET/ROM (packet radio) support"
