@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="PPP (serial line) support"
