@@ -1,0 +1,2 @@
+STATUS=n
+QUESTION="SIT (IPv6-in-IPv4) support"
