@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="SLIP (serial line) support"
