@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="STRIP (Metricom radio) support"
