@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="Token ring (generic) support"
