@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="IPIP Tunnel support"
