@@ -1,0 +1,2 @@
+STATUS=y
+QUESTION="X.25 (generic) support"
