@@ -1,0 +1,2 @@
+STATUS=n
+QUESTION="Does your system support GNU gettext?"
