@@ -2,6 +2,9 @@
 	* CONFIGURE, DEPENDS: disable decnet support as it's broken,
 	  fixes bug #8922
 
+2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
+	* DETAILS: (automated) Add KEYWORDS
+
 2006-03-12 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: ...almost forgot PATCHLEVEL.
 
